--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,15 @@ build-backend = "setuptools.build_meta"
 name = "lexy"
 authors = [{ name = "Antonio Rodriguez", email = "antonioinorge@hotmail.com" }]
 description = "Lexy is a lightweight CLI tool that fetches programming tutorials from 'Learn X in Y Minutes' directly into your terminal. Quickly search, learn, and reference code examples without leaving your workflow."
-version = "0.1.0"
+version = "0.2.0"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.13"
 dependencies = [
-    "beautifulsoup4>=4.13.4",
- "click>=8.1.8",
- "requests>=2.32.3",
- "typer>=0.15.3",
+  "beautifulsoup4>=4.13.4",
+  "click>=8.1.8",
+  "requests>=2.32.3",
+  "typer>=0.15.3",
 ]
 
 [project.urls]
@@ -26,3 +26,6 @@ lexy = "lexy.lexy:lexy"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
+
+[tool.pytest.ini_options]
+pythonpath = [".", "src"]
