--- a/.github/workflows/gitlab_sync.yml
+++ b/.github/workflows/gitlab_sync.yml
@@ -9,6 +9,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
       - name: Fetch all branches
         run: git fetch --all
 
