--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lexy"
-authors = [{ name = "Antonio Rodriguez", email = "antonioinorge@hotmail.com" }]
+authors = [
+  { name = "Antonio Rodriguez", email = "kontakt@antoniorodriguez.no" },
+]
 description = "Lexy is a lightweight CLI tool that fetches programming tutorials from 'Learn X in Y Minutes' directly into your terminal. Quickly search, learn, and reference code examples without leaving your workflow."
 version = "0.4.5"
 readme = "README.md"
